Agrega redondeo, leyenda de carrito vacío, estilos para mobile, funcionalidad de muestra de productos guardados en el carrito + cuenta total y cambia nombre de estado saveList a cartList

--- a/src/styles/SidebarShoppingCart.css
+++ b/src/styles/SidebarShoppingCart.css
@@ -46,6 +46,10 @@
   margin-bottom: 7px;
   overflow-y: scroll;
 }
+.sidebar-shopping-cart .empty-legend {
+  text-align: center;
+  font-weight: bold;
+}
 .sidebar-shopping-cart .item-container,
 .sidebar-shopping-cart .total-container {
   background-color: #fffefa;
@@ -60,6 +64,9 @@
   font-weight: bold;
   display: flex;
   justify-content: space-between;
+}
+.sidebar-shopping-cart .fa-caret-right {
+   transition: all 0.3s ease-in-out;
 }
 .sidebar-shopping-cart .dropdown-detail-item {
   height: 0px;
