--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@
   position: relative;
 }
 
+/* Header */
 .App-header {
   width: 100%;
   display: flex;
@@ -12,9 +13,16 @@
   justify-content: space-between;
   padding: 16px 16px 0 16px;
 }
+.App-header i {
+    font-size: 20px;
+}
 
-.title-description{
+/* Main */
+main {
     padding: 16px;
+}
+.title-description{
+    padding-bottom: 16px;
     text-align: center;
 }
 
