--- a/src/styles/ModalSaveItem.css
+++ b/src/styles/ModalSaveItem.css
@@ -14,6 +14,7 @@
     background-color: #FFFEFA;
     border-radius: 25px;   
     padding: 20px;
+    margin-bottom: 270px;
 }
 .form-modal-save-calc input {
     width: 100%;
