--- a/src/styles/SidebarShoppingCart.css
+++ b/src/styles/SidebarShoppingCart.css
@@ -7,6 +7,8 @@
   flex-direction: column;
   transform: translateX(-100%);
   transition: all 0.5s ease-in-out;
+  box-shadow: 0px 0px 10px grey;
+  border-radius: 0px 25px 25px 0px;
 }
 
 /* Header */
